# homophones

./: Cargo.toml  homophones.txt  input_list.txt  readme.markdown
homophone-lists/: cleaned-as-singles.txt  homophones-from-niceware-as-pairs.txt  homophones-from-niceware-as-singles.txt  homophones-large-as-pairs.txt  homophones-large-as-singles.txt  homophones-medium-as-pairs.txt  homophones-medium-as-singles.txt
src/: main.rs
