[package]
name = "homophones"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# reqwest = { version = "0.10", features = ["blocking", "json"] }
reqwest = "0.11.8"
futures = "0.3.19"
async-std = "1"
scraper = "0.12.0"
select = "*"
clap = { version = "3.0.14", features = ["derive"] }
tokio = { version = "1.15.0", features = ["full"] }
