[package]
name = "homophones"
version = "0.1.21"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
scraper = "0.12.0"
select = "*"
clap = { version = "3.0.14", features = ["derive"] }
